fog of war using alpha blending

--- a/Assets/README
+++ b/Assets/README
@@ -3,3 +3,10 @@ https://free3d.com/3d-model/low-poly-tree-73217.html
 
 - Ground tiles
 https://opengameart.org/content/ground-tiles-1
+
+
+
+
+
+- Masking for fog of war
+https://en.sfml-dev.org/forums/index.php?topic=7427.0
