--- a/Assets/README
+++ b/Assets/README
@@ -5,6 +5,9 @@ https://free3d.com/3d-model/low-poly-tree-73217.html
 https://opengameart.org/content/ground-tiles-1
 
 
+- 2D Characters
+https://opengameart.org/content/pixel-characters-tiles-ai
+
 
 
 
